force-app/main/default/objects/Lead/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <description>Documento fiscal do lead — CNPJ (PJ) ou CPF (PF). Texto livre (sem máscara/validação de formato no v1). Mapeado para Account.CNPJ_CPF__c na conversão — ver demanda-06.</description>
    <label>CNPJ/CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>