force-app/main/default/objects/Lead/fields/EmailFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>EmailFinanceiro__c</fullName>
    <description>E-mail do setor financeiro do cliente PJ — obrigatório para Lead PJ (ver Validation Rule Lead_PJ_Campos_Obrigatorios). Pendência #2 do BRD (campos obrigatórios de cadastro) já reflete este campo.</description>
    <label>E-mail Financeiro</label>
    <type>Email</type>
</CustomField>