force-app/main/default/objects/Lead/fields/LinhaDeInteresse__c.field-meta.xml
<CustomField>
    <fullName>LinhaDeInteresse__c</fullName>
    <description>Linha de produto de interesse do Lead (Cromata, Flexa ou Jato) — grafia oficial do BRD (architecture.md), não a grafia usada por engano em demandas anteriores (User.Linha_de_Produto__c/Account.LinhaDeProduto__c, pendência de correção registrada em architecture.md). Ver demanda-06.</description>
    <label>Linha de Interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cromata</fullName>
            </value>
            <value>
                <fullName>Flexa</fullName>
            </value>
            <value>
                <fullName>Jato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>