force-app/main/default/objects/Lead/fields/OrigemProspeccao__c.field-meta.xml
<CustomField>
    <fullName>OrigemProspeccao__c</fullName>
    <description>Como este Lead chegou até a Cromatta — ver business-scenario.md/BRD 3.1.2. Valores alinhados a Account.OrigemCadastro__c (demanda-05), com o rótulo completo &quot;Prospecção Ativa/Porta a Porta&quot; pedido nesta demanda.</description>
    <label>Origem de Prospecção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Feira do Setor</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Prospecção Ativa/Porta a Porta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>