force-app/main/default/objects/Lead/fields/ResponsavelFechamento__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelFechamento__c</fullName>
    <description>Nome da pessoa do lado do cliente PJ responsável por aprovar/fechar a compra — obrigatório para Lead PJ (ver Validation Rule Lead_PJ_Campos_Obrigatorios).</description>
    <label>Responsável pelo Fechamento</label>
    <length>120</length>
    <type>Text</type>
</CustomField>