force-app/main/default/objects/Lead/fields/TipoPessoa__c.field-meta.xml
<CustomField>
    <fullName>TipoPessoa__c</fullName>
    <description>PF (pessoa física) ou PJ (pessoa jurídica) — determina os campos obrigatórios do Lead (ver Validation Rules Lead_PF_Campos_Obrigatorios/Lead_PJ_Campos_Obrigatorios) e é mapeado para Account.TipoPessoa__c na conversão (ADR 0003). Ver demanda-06.</description>
    <label>Tipo de Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>